# ProyectoELO329

./: CMakeLists.txt  README.md  config.txt  datasimulator.cpp  datasimulator.h  idatasource.h  main.cpp  mainwindow.cpp  mainwindow.h  sensorcard.cpp  sensorcard.h  sensorchannel.cpp  sensorchannel.h  serialsource.cpp  serialsource.h
Proyecto/: CMakeLists.txt  datasimulator.cpp  datasimulator.h  idatasource.h  mainwindow.cpp  mainwindow.h  sensorcard.cpp  sensorcard.h  sensorchannel.cpp  sensorchannel.h  serialsource.cpp  serialsource.h
back/include/: AlarmMonitor.h  ConfigReader.h  DataSimulator.h  SensorData.h
back/src/: AlarmMonitor.cpp  ConfigReader.cpp  DataSimulator.cpp
front/include/: DiverWidget.h  MainWindow.h
front/src/: DiverWidget.cpp  MainWindow.cpp
